--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@kbox-labs/react-echarts": "^1.4.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "echarts": "^5.6.0",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
