--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,14 +25,14 @@ bip0039 = "0.9.0"
 orchard = "0.3.0"
 reqwest = { version = "0.11.27", features = ["json"] }
 pasta_curves = "0.5.1"
-zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="b266801"}
+zcash-vote = {git = "https://github.com/hhanh00/zcash-vote.git", rev="f356534"}
 
 [patch.crates-io]
 orchard = {git = "https://github.com/hhanh00/orchard.git", rev="e7abba7"}
 halo2_gadgets  = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
 halo2_proofs = { git = "https://github.com/zcash/halo2.git", rev = "642924d614305d882cc122739c59144109f4bd3f" }
 
-#[patch."https://github.com/hhanh00/zcash-vote.git"]
+[patch."https://github.com/hhanh00/zcash-vote.git"]
 #zcash-vote = {path = "../../zwallet/native/zcash-vote"}
 
 [profile.dev]
