--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "sweetalert2": "^11.15.10"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
