--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -31,10 +31,13 @@ jobs:
           echo "Certificate imported."
       - name: Check out code
         uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Prepare Tauri
         run: |
-          npm install
-          npx tauri icon
+          pnpm install
+          pnpm tauri icon
       - name: Tauri build
         uses: tauri-apps/tauri-action@v0
         env:
