--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Prepare Tauri
         run: |
           pnpm install
-          pnpm tauri icon
+          npx tauri icon
       - name: Tauri build
         uses: tauri-apps/tauri-action@v0
         env:
