--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -3,6 +3,8 @@ name: Rust CI Mac
 on:
   workflow_dispatch:
   pull_request:
+    branches-ignore:
+      - "release-please--branches--main--components--*"
 
 jobs:
   build-macos:
